Add files for ansible galaxy

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,5 +4,4 @@
       dest: /etc/sudoers
       state: present
       line: '%{{ generic_admins__groupname}}  ALL=(ALL)       NOPASSWD: ALL'
-    notify:
-    - check sudo syntax
+      validate: '/usr/sbin/visudo -cf %s'
